networks.tf
# Create VPC
resource "aws_vpc" "vpc_master" {
  provider             = aws.provider
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "master-vpc-web-server"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "igw" {
  provider = aws.provider
  vpc_id   = aws_vpc.vpc_master.id
}

data "aws_availability_zones" "azs" {
  provider = aws.provider
  state    = "available"
}

resource "aws_subnet" "subnet_1" {
  provider          = aws.provider
  availability_zone = element(data.aws_availability_zones.azs.names, 0)
  vpc_id            = aws_vpc.vpc_master.id
  cidr_block        = "10.0.1.0/24"
}

#Create route table in us-east-1
resource "aws_route_table" "internet_route" {
  provider = aws.provider
  vpc_id   = aws_vpc.vpc_master.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  lifecycle {
    ignore_changes = all
  }
  tags = {
    Name = "Master-Region-RT"
  }
}

resource "aws_main_route_table_association" "set-master-default-rt-assoc" {
  provider       = aws.provider
  vpc_id         = aws_vpc.vpc_master.id
  route_table_id = aws_route_table.internet_route.id
}
